--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 yarn-debug.log*
 .yarn-integrity
 .env
-public/uploads
+/public/uploads
 
 # Ignore application configuration
 /config/application.yml
