--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "sweetalert2": "^11.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
