Remove the red bottom line in scss when writing Tailwind

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "files.autoSave": "afterDelay",
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
 }
