--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
+    "cropperjs": "^1.5.11",
     "postcss": "^7",
     "sweetalert2": "^11.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
@@ -19,10 +20,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
     "@prettier/plugin-ruby": "^1.5.5",
     "prettier": "^2.3.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
